--- a/index.html
+++ b/index.html
@@ -71,20 +71,29 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
-                <hr />
-<h2 id="_1">这是个什么项目？</h2>
-<p><a href="./">简体中文</a> | <a href="./">English</a></p>
-<p>当前，数字孪生、人工智能技术（AI）不断发展，传统水务水利行业的智能化转型趋势愈发明显。但是，想法和方案的实际落地，以及真正为客户提供价值的过程，仍然存在很多挑战。</p>
-<p><strong>YunmengEnvs</strong>，云梦环境，作为一个融合 CFD 和 AI 技术的环境流体力学模拟和集成框架，希望能帮助理解专业概念、数值方法和现实数据；希望能提供一个标准化的平台来尝试新想法、新技术和新方案。 </p>
+                <p align="center">
+  <a href="https://github.com/NumHub612/YunmengEnvs">
+    <img src="./assets/logo.jpg" alt="YunmengEnvs" />
+  </a>
+</p>
+
 <hr />
-<h2 id="_2">如何使用？</h2>
+<h2 id="yunmengenvs">什么是 YunmengEnvs？</h2>
+<p><strong>YunmengEnvs 云梦环境</strong>，是一个尝试将计算流体力学（CFD）与人工智能（AI）技术深度融合的环境流体力学模型框架。我们的目标是为理解流体力学概念、分析现实数据和解决工程问题提供一个集成平台，希望这个平台能够成为一个试验场，帮助研究者和开发者更容易地尝试新的想法、技术和解决方案。</p>
+<p><strong>What's News!</strong></p>
+<ul>
+<li>🔥🔥🔥 <strong>[2024-12-25]</strong>: 项目处于开发验证阶段，欢迎大家参与测试和贡献！</li>
+</ul>
 <hr />
-<h2 id="_3">现在加入！</h2>
-<p>我们希望能够做出一些有趣的尝试和成果，希望能够将这些想法和经验分享给整个社区。</p>
-<p>如果你对这个项目感兴趣，欢迎加入我们！<br />
-你的加入将是对我们最大的鼓励！ </p>
+<h2 id="_1">如何使用？</h2>
 <hr />
-<h2 id="_4">更多</h2>
+<h2 id="_2">加入我们！</h2>
+<p>我们希望能够做出一些有趣的尝试和成果，能够将这些想法和经验分享给整个社区。</p>
+<p>如果你对这个项目感兴趣，欢迎加入我们！   </p>
+<p>感谢我们的贡献者:</p>
+<p><a href="https://github.com/NumHub612/YunmengEnvs/graphs/contributors">
+  <img src="https://contrib.rocks/image?repo=NumHub612/YunmengEnvs" />
+</a></p>
 <hr />
               
             </div>
